gcc/testsuite/gm2/switches/uninit-variable-checking/fail/testsmallvec.mod
MODULE testsmallvec ;

TYPE
   vec = RECORD
            x, y: CARDINAL ;
         END ;

PROCEDURE test ;
VAR
   v: vec ;
BEGIN
   IF v.x = 2
   THEN
   END
END test ;


BEGIN
   test
END testsmallvec.
